Updated index.html file
Added in page for the design brief, and changed the footer to include contact information

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="#intro">Intro</a></li>
             <li><a href="#work">My Work</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#design">Design</a></li>
             <!-- <li><a href="#elements">Elements</a></li> -->
           </ul>
         </nav>
@@ -99,46 +99,37 @@
           <p>
             When I first started thinking about what I wanted to do with my future, I never thought that web design would be what I would chose. I'm very glad that I did, because I find it to be very enjoyable. When I'm not working on coding, I enjoy being in nature. Hiking, backpacking, canoeing, you name it, I love it.
           </p>
-		  <p>
-			When I was younger I was in Cub Scouts, and then Boy Scouts, where I held various "leadership" positions as patrol leader for a year or more. In 2016 I achieved the rank of Eagle Scout, scouting's highest rank. All of this time in scouting throughout the years really fostered my love of nature.
-		  </p>
-		  <p>
-			I also really belive in family, and enjoy spending time with my family and friends, and making memories with them.
-		  </p>
+          <p>
+          When I was younger I was in Cub Scouts, and then Boy Scouts, where I held various "leadership" positions as patrol leader for a year or more. In 2016 I achieved the rank of Eagle Scout, scouting's highest rank. All of this time in scouting throughout the years really fostered my love of nature.
+          </p>
+          <p>
+          I also really belive in family, and enjoy spending time with my family and friends, and making memories with them.
+          </p>
         </article>
 
-        <!-- Contact -->
-        <article id="contact">
-          <h2 class="major">Contact</h2>
-          <form method="post" action="#">
-            <div class="fields">
-              <div class="field half">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" />
-              </div>
-              <div class="field half">
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email" />
-              </div>
-              <div class="field">
-                <label for="message">Message</label>
-                <textarea name="message" id="message" rows="4"></textarea>
-              </div>
-            </div>
-            <ul class="actions">
-              <li>
-                <input type="submit" value="Send Message" class="primary" />
-              </li>
-              <li><input type="reset" value="Reset" /></li>
-            </ul>
-          </form>
-          <ul class="icons">
-            <li>
-              <a href="https://github.com/zsatwell" class="icon brands fa-github"
-                ><span class="label">GitHub</span></a
-              >
-            </li>
-          </ul>
+        <!-- Design -->
+        <article id="design">
+          <h2 class="major">Project Design Brief</h2>
+
+          <h3>Audience Profile:</h3>
+          <p>
+            The targeted audience of this site is primarily employers and people in need of web design services. The secondary audience is anyone who wants to see the work that I have done so far.
+          </p>
+          <h3>Self Marketing Plan:</h3>
+          <p>
+            For self marketing, I think that it is important to keep the portfolio up to date with newer and better projects to show off the skills that I have. I think it is also important to work on improving the actual portfolio website itself with newer designs to display the learned skills. The portfolio will be shared with potential employers, so it is important that it looks well done and professional. Having the portfolio as a public facing website will allow people to see the work that I am able to do.
+          </p>
+          <h3>Initial Wireframes:</h3>
+          <p>
+            I want the design of the portfolio site to look like an actual portfolio, with a cover page (homepage with site title and navigation), and then a page for each topic (about, education, projects, and contact). I would like the portfolio to be simple, but also professional looking.
+
+          </p>
+          <h4>Home Page Layout:</h4>
+          <span class="image main"><img src="images/homeScreen.png" alt="" /></span>
+          <h4>About Me/Education Page Layout:</h4>
+          <span class="image main"><img src="images/aboutEducation.png" alt="" /></span>
+          <h4>Projects Page Layout:</h4>
+          <span class="image main"><img src="images/projects.png" alt="" /></span>
         </article>
 
         <!-- Elements -->
@@ -452,9 +443,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <!-- Footer -->
       <footer id="footer">
         <p class="copyright">
-          &copy; Zach Atwell. Design:
+          &copy; <a href="mailto:zsatwell@mymail.tstc.edu">Contact Me</a>. Design:
           <a href="https://html5up.net">HTML5 UP</a>.
-        </p>
+        </p><br>
+        <ul class="icons">
+          <li>
+            <a href="https://github.com/zsatwell" class="icon brands fa-github"
+              ><span class="label">GitHub</span></a
+            >
+          </li>
+        </ul>
       </footer>
     </div>
 
