Updated index.html file
Fixed a typo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<li>JavaScript</li>
 				<li>PHP</li>
 				<li>MySQL</li>
-				<li>Adobe Applications (Photoshop & Adobe XD</li>
+				<li>Adobe Applications (Photoshop & Adobe XD)</li>
 			</ul>
 			And have had some experience working with:
 			<ul>
