Updated projects and about info

--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@
 				<li>JavaScript</li>
 				<li>PHP</li>
 				<li>MySQL</li>
+				<li>Python</li>
 				<li>Adobe Applications (Photoshop & Adobe XD)</li>
 			</ul>
 			And have had some experience working with:
 			<ul>
 				<li>jQuery</li>
 				<li>The MEAN Stack</li>
+				<li>Django</li>
+				<li>WordPress</li>
+				<li>Shopify</li>
 			</ul>
 		  </p>
         </article>
@@ -83,11 +87,12 @@
 			  I have learned alot during my time at TSTC, and I only plan on learning more and growing more in my skills with web development.
 			</p>
 			<p>
-			  Here are three of the projects that I have created so far in my studies. Projects 1 and 2 were created using CMSs, and project 3 was created when I was learning beginner JavaScript.
+			  Here are some of the projects that I have created so far in my studies. The first 2 projects are just small websites that I created to get practice using JavaScript/CSS/PHP. The 3rd and 4th are ecommerce sites using WordPress and Shopity. The Shopify website is a developer site, and the password to access is timtime123.
 			  <ul>
-				  <li><a href="http://zsatwell.com/wp/">Project 1</a></li>
-				  <li><a href="https://zsatwell.com/wordpress/">Project 2</a></li>
-				  <li><a href="project3.html">Project 3</a></li>
+				  <li><a href="project3.html">Project 1 - First time with JavaScript</a></li>
+				  <li><a href="http://zsatwell.com/">Project 2 - Fully optimized images and performance tweaks</a></li>
+				  <li><a href="https://zsatwell.com/wallys/">Project 3 - WooCommerce Site</a></li>
+				  <li><a href="https://tims-timepieces.myshopify.com/">Project 4 - Shopify Site</a></li>
 			  </ul> 
 			</p>
 		  </article>
@@ -105,31 +110,6 @@
           <p>
           I also really belive in family, and enjoy spending time with my family and friends, and making memories with them.
           </p>
-        </article>
-
-        <!-- Design -->
-        <article id="design">
-          <h2 class="major">Project Design Brief</h2>
-
-          <h3>Audience Profile:</h3>
-          <p>
-            The targeted audience of this site is primarily employers and people in need of web design services. The secondary audience is anyone who wants to see the work that I have done so far.
-          </p>
-          <h3>Self Marketing Plan:</h3>
-          <p>
-            For self marketing, I think that it is important to keep the portfolio up to date with newer and better projects to show off the skills that I have. I think it is also important to work on improving the actual portfolio website itself with newer designs to display the learned skills. The portfolio will be shared with potential employers, so it is important that it looks well done and professional. Having the portfolio as a public facing website will allow people to see the work that I am able to do.
-          </p>
-          <h3>Initial Wireframes:</h3>
-          <p>
-            I want the design of the portfolio site to look like an actual portfolio, with a cover page (homepage with site title and navigation), and then a page for each topic (about, education, projects, and contact). I would like the portfolio to be simple, but also professional looking.
-
-          </p>
-          <h4>Home Page Layout:</h4>
-          <span class="image main"><img src="images/homeScreen.png" alt="" /></span>
-          <h4>About Me/Education Page Layout:</h4>
-          <span class="image main"><img src="images/aboutEducation.png" alt="" /></span>
-          <h4>Projects Page Layout:</h4>
-          <span class="image main"><img src="images/projects.png" alt="" /></span>
         </article>
 
         <!-- Elements -->
