Updated contact email on site

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <!-- Footer -->
       <footer id="footer">
         <p class="copyright">
-          &copy; <a href="mailto:zsatwell@mymail.tstc.edu">Contact Me</a>. Design:
+          &copy; <a href="mailto:zsatwell516@gmail.com">Contact Me</a>. Design:
           <a href="https://html5up.net">HTML5 UP</a>.
         </p><br>
         <ul class="icons">
